# healthhub

./: package.json
ai/: Dockerfile  Rn.sav  dt.sav  lgbm.joblib  main.py  pyproject.toml  requirements.txt  scaler.pkl
frontend/: index.html  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 4d1b51b9f1d43d02.webpack.hot-update.json  e34caad135992855.webpack.hot-update.json  fc470713dedd5b05.webpack.hot-update.json  webpack.385d7774f5f0bfa8.hot-update.js  webpack.3cd15171a060d2a7.hot-update.js  webpack.4d1b51b9f1d43d02.hot-update.js  webpack.7a878662333434dd.hot-update.js  webpack.a2e52843449c9be8.hot-update.js  webpack.e34caad135992855.hot-update.js  webpack.e600b25852bdd9a1.hot-update.js  webpack.e957b67c4e667bb8.hot-update.js  (+2 more)
frontend/app/: constants.js  layout.js  page.js
frontend/app/[modal]/: fields.js  page.js
frontend/app/brain/: page.js
frontend/components/: ImageUploader.js
frontend/css/: owl.carousel.min.css  style.css  theme-default.css
(+19 files in other folders)
